--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
                 <section data-markdown="slide.md"
-                         data-separator="\n---\n$"
-                         data-vertical="\n--\n"
+                         data-separator="^---$"
+                         data-separator-vertical="^--$"
                          data-charset="utf8"
                          >
                 </section>
