--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8">
 
-        <title>reveal.js – The HTML Presentation Framework</title>
+        <title>symfony meetup #8 LT shimoda</title>
 
-        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+        <meta name="description" content="gitの失われた歴史を取り戻したい">
         <meta name="author" content="Hakim El Hattab">
 
         <meta name="apple-mobile-web-app-capable" content="yes">
